k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tom-wakhungu
  labels:
    name: tom-wakhungu
    project: capstone
