k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tom-wakhungu
  labels:
    app: backend
    component: medicine-inventory
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
